<resources>
    <string name="app_name">Ramazon taqvimi 2022</string>
    <string name="ramazon_taqvimi_2022">Ramazon Taqvimi 2022</string>
    <string name="hududni_tanlash">Taqvim 2022</string>
    <string name="muallif">Muallif</string>
    <string name="ulashish">Ulashish</string>
    <string name="quyidagi_taqvim_toshkent_vaqti_bilan_qolgan_hududlar_jadvaldan_quyida_keltirilgan">Quyidagi taqvim Toshkent vaqti bilan.Qolgan hududlar jadvaldan quyida keltirilgan</string>
    <string name="ro_za_kuni">Ro\'za kuni</string>
    <string name="saharlik">Saharlik</string>
    <string name="iftorlik">Iftorlik</string>
    <string name="_1_kun_2_aprel_shanba">1-kun 2-aprel Shanba</string>
    <string name="_04_47">04:47</string>
    <string name="_18_51">18:51</string>
    <string name="_2_kun_3_aprel_yakshanba">2-kun 3-aprel Yakshanba</string>
    <string name="_04_45">04:45</string>
    <string name="_18_52">18:52</string>
    <string name="_3_kun_4_aprel_dushanba">3-kun 4-aprel Dushanba</string>
    <string name="_04_43">04:43</string>
    <string name="_18_53">18:53</string>
    <string name="_4_kun_5_aprel_seshanba">4-kun 5-aprel Seshanba</string>
    <string name="_04_41">04:41</string>
    <string name="_18_54">18:54</string>
    <string name="_5_kun_6_aprel_chorshanba">5-kun 6-aprel Chorshanba</string>
    <string name="_04_39">04:39</string>
    <string name="_18_55">18:55</string>
    <string name="_6_kun_7_aprel_payshanba">6-kun 7-aprel Payshanba</string>
    <string name="_04_37">04:37</string>
    <string name="_18_56">18:56</string>
    <string name="_7_kun_8_aprel_juma">7-kun 8-aprel Juma</string>
    <string name="_04_35">04:35</string>
    <string name="_18_57">18:57</string>
    <string name="_8_kun_9_aprel_shanba">8-kun 9-aprel Shanba</string>
    <string name="_04_34">04:34</string>
    <string name="_18_58">18:58</string>
    <string name="_9_kun_10_aprel_yakshanba">9-kun 10-aprel Yakshanba</string>
    <string name="_04_32">04:32</string>
    <string name="_18_59">18:59</string>
    <string name="_10_kun_11_aprel_dushanba">10-kun 11-aprel Dushanba</string>
    <string name="_04_30">04:30</string>
    <string name="_19_00">19:00</string>
    <string name="_11_kun_12_aprel_seshanba">11-kun 12-aprel Seshanba</string>
    <string name="_04_28">04:28</string>
    <string name="_19_01">19:01</string>
    <string name="_12_kun_13_aprel_chorshanba">12-kun 13-aprel Chorshanba</string>
    <string name="_04_26">04:26</string>
    <string name="_19_03">19:03</string>
    <string name="_13_kun_14_aprel_payshanba">13-kun 14-aprel Payshanba</string>
    <string name="_04_25">04:25</string>
    <string name="_19_04">19:04</string>
    <string name="_14_kun_15_aprel_juma">14-kun 15-aprel Juma</string>
    <string name="_04_23">04:23</string>
    <string name="_19_05">19:05</string>
    <string name="_15_kun_16_aprel_shanba">15-kun 16-aprel Shanba</string>
    <string name="_04_21">04:21</string>
    <string name="_19_06">19:06</string>
    <string name="_16_kun_17_aprel_yakshanba">16-kun 17-aprel Yakshanba</string>
    <string name="_04_19">04:19</string>
    <string name="_19_07">19:07</string>
    <string name="_17_kun_18_aprel_dushanba">17-kun 18-aprel Dushanba</string>
    <string name="_04_17">04:17</string>
    <string name="_19_08">19:08</string>
    <string name="_18_kun_19_aprel_seshanba">18-kun 19-aprel Seshanba</string>
    <string name="_04_15">04:15</string>
    <string name="_19_09">19:09</string>
    <string name="_19_kun_20_aprel_chorshanba">19-kun 20-aprel Chorshanba</string>
    <string name="_04_13">04:13</string>
    <string name="_19_10">19:10</string>
    <string name="_20_kun_21_aprel_payshanba">20-kun 21-aprel Payshanba</string>
    <string name="_04_12">04:12</string>
    <string name="_19_11">19:11</string>
    <string name="_21_kun_22_aprel_juma">21-kun 22-aprel Juma</string>
    <string name="_04_10">04:10</string>
    <string name="_19_12">19:12</string>
    <string name="_22_kun_23_aprel_shanba">22-kun 23-aprel Shanba</string>
    <string name="_04_08">04:08</string>
    <string name="_19_13">19:13</string>
    <string name="_23_kun_24_aprel_yakshanba">23-kun 24-aprel Yakshanba</string>
    <string name="_04_06">04:06</string>
    <string name="_19_14">19:14</string>
    <string name="_24_kun_25_aprel_dushanba">24-kun 25-aprel Dushanba</string>
    <string name="_04_05">04:05</string>
    <string name="_19_15">19:15</string>
    <string name="_25_kun_26_aprel_seshanba">25-kun 26-aprel Seshanba</string>
    <string name="_04_04">04:04</string>
    <string name="_19_17">19:17</string>
    <string name="_26_kun_27_aprel_chorshanba">26-kun 27-aprel Chorshanba</string>
    <string name="_04_02">04:02</string>
    <string name="_19_18">19:18</string>
    <string name="_27_kun_28_aprel_payshanba">27-kun 28-aprel Payshanba</string>
    <string name="_03_59">03:59</string>
    <string name="_19_19">19:19</string>
    <string name="_28_kun_29_aprel_juma">28-kun 29-aprel Juma</string>
    <string name="_03_57">03:57</string>
    <string name="_19_20">19:20</string>
    <string name="_29_kun_30_aprel_shanba">29-kun 30-aprel Shanba</string>
    <string name="_03_56">03:56</string>
    <string name="_19_21">19:21</string>
    <string name="_30_kun_1_may_yakshanba">30-kun 1-may Yakshanba</string>
    <string name="_03_54">03:54</string>
    <string name="_19_22">19:22</string>
    <string name="quyoshning_chiqish_va_botish_vaqtidagi_farqlar_daqiqalardaa">Quyoshning chiqish va botish vaqtidagi farqlar (daqiqalarda):</string>
    <string name="toshkent_vaqtidan_oldin_angren_3_3_bekobod_4_2_namangan_9_10_farg_ona_6_12_andijon_11_13_qo_qon_3_8_xo_jaobod_12_13_shaxrixon_10_12">Toshkent vaqtidan oldin: Angren 3/3, Bekobod -4/2, Namangan 9/10, Farg’ona 6/12, Andijon 11/13, Qo’qon 3/8, Xo’jaobod 12/13, Shaxrixon 10/12.</string>
    <string name="quyoshning_chiqish_va_botish_vaqtidagi_farqlar_daqiqalarda">Quyoshning chiqish va botish vaqtidagi farqlar (daqiqalarda):</string>
    <string name="toshkent_vaqtidan_keyin_jizzax_6_7_guliston_2_3_denov_7_7_termiz_10_10_samarqand_10_11_kattaqo_rg_on_11_13_nurota_17_18_navoiy_16_17_buxoro_23_18_nukus_37_39_mo_ynoq_39_41_urganch_35">Toshkent vaqtidan keyin: Jizzax 6/7, Guliston 2/3, Denov 7/7, Termiz 10/10, Samarqand 10/11, Kattaqo’rg’on 11/13, Nurota 17/18, Navoiy 16/17, Buxoro 23/18, Nukus 37/39, Mo’ynoq 39/41, Urganch 35.</string>
    <string name="c">Саҳарлик(оғиз ёпиш) дуоси:</string>
    <string name="yopish">" \"Навайту ан асувма совма шаҳри рамазона минал фажри илал мағриби, холисан лиллаҳи таъаалаа. Аллоҳу акбар\". Маъноси: Рамазон ойининг рўзасини субҳдан то кун ботгунча тутмоқни ният қилдим. Холис Аллоҳ учун Аллоҳ буюкдир."</string>
    <string name="ift">Ифторлик (оғиз очиш) дуоси:</string>
    <string name="iftorlikkk">" \"Аллоҳумма лака сумту ва бика ааманту ва аълайка таваккалту ва аълаа ризқика афтарту, фағфирлий ма қоддамту ва маа аххорту бироҳматика йаа арҳамар рооҳимийн.Аллоҳу акбар\". Маъноси: Эй Аллоҳ, ушбу Рўзамни Сен учун тутдим ва Сенга иймон келтирдим ва Сенга таваккал қилдим ва берган ризқинг билан ифтор қилдим. Эй меҳрибонларнинг энг меҳрибони, менинг аввалги ва кейинги гуноҳларимни мағфират қилгил. Аллоҳ буюкдир (Овмийн)."</string>


</resources>